1.9.19
------


1.9.18
------
(RB=203386)
Fixed bug in client only config key-values.

(RB=203610)
Add support for returning error details in batch create responses.

(RB=202724)
Implement context path for Jetty server.

1.9.17
------
(RB=202641)
fix isRegistered in JmxManager

(RB=198503)
Added ability for clients to provide service level configs. Added support for clients to enable response compression.

(RB=202201)
Add thread pool size configuration parameters to RestliServlet, NettyStandaloneLauncher and StandaloneLauncher (jetty).

(RB=200469)
Allow an boolean expression of predicate names to be passed to FilterSchemaGenerator.
Add NOT predicate.

1.9.16
------
(RB=200567)
add isRegistered to JmxManager to find out whether a bean has been registered to jmx

(RB=200079)
Changing the dev default of the compat checker to BACKWARDS.

1.9.15
------
(RB=199182)
Remove unneeded dependencies on r2-jetty to avoid dragging jetty dependency downstream

1.9.14
------
(RB=196208)
Print warning for the deprecated configuration from the pegasus plugin.
Correct variable names in the pegasus plugin.

(RB=197690)
Relaxing the action parameter check to allow them on all method types as before.

1.9.13
------
(RB=196626)
Added batch operations to the async complex key template.

(RB=196751)
Fixing the schema resolution ordering problem.

(RB=196211)
Disallow @QueryParam in action methods, disallow @ActionParam in non-action methods.

(RB=197277)
Added support for shutting down the ZK connection asynchronously in the d2 client and ZKFSLoadBalancer.

1.9.12
------
(RB=196204)
Fixing data template generator to process type refs specified as array and map items.

(RB=192500)
Add class to filter DataSchemas in a directory by removing unwanted fields or custom properties of the schema according to given Predicate.

(RB=196098)
Improve FileClassNameScanner to 1) require a specific extension; 2) exclude whose guessed class name contains dots.

1.9.11
------
(RB=194990)