@@ -5,6 +5,9 @@
   "doc" : "Various action tasks that demonstrate usual behavior, timeout, and exceptions.\n\ngenerated from: com.linkedin.restli.examples.greetings.server.ActionsResource",
   "actionsSet" : {
     "actions" : [ {
+      "name" : "arrayPromise",
+      "returns" : "{ \"type\" : \"array\", \"items\" : \"int\" }"
+    }, {
       "name" : "echo",
       "parameters" : [ {
         "name" : "input",
